Bug 314846 - exthandler doesn't remove : colon from mac file names (Random filename after downloading).  Patch by Edward Lee <edilee@gmail.com>.  r=benjamin, sr=cbiesinger